// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Price Summary should show Price Summary 1`] = `
<div
  className="MuiGrid-root Component-row-1 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
>
  <div
    className="MuiGrid-root Component-value-3 MuiGrid-item"
  >
    <div>
      $0.0001
       
    </div>
  </div>
</div>
`;

exports[`Price Summary should show Price Summary with appendCurrency 1`] = `
<div
  className="MuiGrid-root Component-row-1 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
>
  <div
    className="MuiGrid-root Component-currency-2 MuiGrid-item"
  >
    USD
  </div>
  <div
    className="MuiGrid-root Component-value-3 MuiGrid-item"
  >
    <div>
      $0.0001
       
    </div>
  </div>
</div>
`;

exports[`Price Summary should show Price Summary with currencyClass 1`] = `
<div
  className="MuiGrid-root Component-row-1 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
>
  <div
    className="MuiGrid-root Component-value-3 MuiGrid-item"
  >
    <div>
      $0.0001
       
    </div>
  </div>
</div>
`;

exports[`Price Summary should show Price Summary with prependCurrency 1`] = `
<div
  className="MuiGrid-root Component-row-1 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
>
  <div
    className="MuiGrid-root Component-value-3 MuiGrid-item"
  >
    <div>
      $0.0001
       
    </div>
  </div>
  <div
    className="MuiGrid-root Component-currency-2 MuiGrid-item"
  >
    USD
  </div>
</div>
`;
